[build-system]
requires = ["setuptools>=59"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
cloudproof_py = ["py.typed", "*.pyi"]

[project]
name = "cloudproof_py"
version = "3.0.0"
authors = [{ name = "Cosmian Tech", email = "tech@cosmian.com" }]
description = "Python library for Cosmian Cloudproof"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "cover-crypt >= 11.0.0, < 12.0.0",
  "findex >= 3.0.0, < 4.0.0",
  "cosmian-kms >= 4.3.3, < 5.0.0",
  "cloudproof-fpe >= 0.1.0, < 1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Cosmian/cloudproof_python"
"Bug Tracker" = "https://github.com/Cosmian/cloudproof_python/issues"
