[build-system]
requires = ["setuptools>=59"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
cloudproof_py = ["py.typed", "*.pyi"]

[project]
name = "cloudproof_py"
version = "5.0.0"
authors = [{ name = "Cosmian Tech", email = "tech@cosmian.com" }]
description = "Python library for Cosmian Cloudproof"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "cloudproof-anonymization >= 0.1.0, < 1.0.0",
  "cover-crypt >= 14.0.0, < 15.0.0",
  "findex >= 6.0.0, < 7.0.0",
  "cosmian-kms >= 4.13.0, < 5.0.0",
  "cloudproof-fpe >= 0.1.0, < 1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Cosmian/cloudproof_python"
"Bug Tracker" = "https://github.com/Cosmian/cloudproof_python/issues"
